--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,6 +35,7 @@
 .nav-link {
   color: #FFFFFF !important; /* White color for unselected links */
   font-size: 1rem;
+  font-family: 'Lora', serif;
   text-decoration: none;
   position: relative;
   transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
