--- a/src/components/IncidentReport.css
+++ b/src/components/IncidentReport.css
@@ -35,13 +35,15 @@
     margin-bottom: 25px;
   }
   
-  .incident-form label {
+/* Increase size of form subheadings */
+.incident-form label {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
     font-weight: bold;
-    font-size: 1.1rem;
-  }
+    font-size: 1.5rem; /* Increased font size for subheadings */
+    color: #E7DCC8; /* Ensure the text color is consistent */
+}
   
   .icon-label {
     margin-right: 8px;
@@ -136,7 +138,7 @@
     color: #4B2D3E; /* Purple text */
     border-radius: 30px;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1rem !important;
     transition: background-color 0.3s ease, transform 0.3s ease;
   }
   
